# TaskSystem

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
projects/: CMakeLists.txt
projects/TaskSystem/: CMakeLists.txt
projects/TaskSystem.UnitTests/: CMakeLists.txt
projects/TaskSystem.UnitTests/src/TaskSystem/: ITaskTests.cpp  MiscTests.cpp  ScheduleItemTests.cpp  SynchronousTaskSchedulerTests.cpp  TaskCompletionSourceTests.cpp  TaskTests.cpp  ValueTaskTests.cpp  WhenAllTests.cpp  WhenAnyTests.cpp
projects/TaskSystem.UnitTests/src/TaskSystem/Detail/: ContinuationsTests.cpp  PromiseTests.cpp  ResultTests.cpp
projects/TaskSystem.UnitTests/src/TaskSystem/Utils/: TaskTestFactory.cpp  TestTaskFactory.hpp  Tracked.hpp
projects/TaskSystem.UnitTests/src/TaskSystem/v1_0/: SynchronousTaskSchedulerTests.cpp  TaskTests.cpp
projects/TaskSystem.UnitTests/src/TaskSystem/v1_1/: ITaskTests.cpp  ScheduleItemTests.cpp  SynchronousTaskScheduler.cpp  SynchronousTaskSchedulerTests.cpp  TaskCompletionSourceTests.cpp  TaskTests.cpp
projects/TaskSystem.UnitTests/src/TaskSystem/v1_1/Detail/: PromiseTests.cpp
projects/TaskSystem/src/TaskSystem/: AtomicLockGuard.hpp  Awaitable.hpp  ITask.hpp  ITaskScheduler.cpp  ITaskScheduler.hpp  ScheduleItem..cpp  ScheduleItem.cpp  ScheduleItem.hpp  SynchronousTaskScheduler.cpp  SynchronousTaskScheduler.hpp  Task.cpp  Task.hpp  TaskCompletionSource.hpp  TaskState.cpp  TaskState.hpp  TaskSystem.natvis  ValueTask.hpp  WhenAll.hpp  WhenAny.hpp
projects/TaskSystem/src/TaskSystem/Detail/: AddContinuationResult.hpp  Continuation.cpp  Continuation.hpp  Continuations.cpp  Continuations.hpp  Enum.hpp  IPromise.hpp  Promise.hpp  Result.hpp  SetCompletedResult.hpp  SetFaultedResult.hpp  SetRunningResult.hpp  SetScheduledResult.hpp  SetSuspendedResult.hpp  TaskStates.hpp  Utils.hpp
projects/TaskSystem/src/TaskSystem/v1_0/: ITaskScheduler.hpp  SynchronousTaskScheduler.cpp  SynchronousTaskScheduler.hpp  Task.cpp  Task.hpp
projects/TaskSystem/src/TaskSystem/v1_1/: AtomicLockGuard.hpp  Awaitable.hpp  ITask.hpp  ITaskScheduler.cpp  ITaskScheduler.hpp  ScheduleItem..cpp  ScheduleItem.hpp  SynchronousTaskScheduler.cpp  SynchronousTaskScheduler.hpp  Task.hpp  TaskCompletionSource.hpp
projects/TaskSystem/src/TaskSystem/v1_1/Detail/: Continuation.hpp  IPromise.hpp  Promise.hpp  TaskStates.hpp  Utils.hpp
